<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="launcher_name">校园导航</string>
    <string name="login">登陆</string>
    <string name="ok">确定</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="signup">注册</string>
	<string name="search">搜索</string>
	<string name="navigate">导航</string>
	
	<string name="class_table">Class Table</string>
	<string name="home">Home</string>
	<string name="search_hint">Search book or room</string>
	<string name="searching">正在查询&#8230;</string>
	<string name="no_result">未找到结果</string>
	<string name="loading">加载中&#8230;</string>
	<string name="class_info">课程信息</string>
	<string name="teacher_info">教师信息</string>
	<string name="affair_info">事务介绍</string>
	<string name="staff_info">人员介绍</string>
	<string name="book_name">书名</string>
	<string name="book_index">索书号</string>
	<string name="shelf">书架</string>
	<string name="room">房间</string>
	<string name="book">图书</string>
	<string name="week">星期</string>
	
	<string name="my_location_unavailable">My location unavailable</string>
	<string name="hangzhou">杭州</string>
	<string name="enter_building_navigation">进入室内导航</string>
	<string name="exit_navigation">退出导航</string>
	
	<string name="search_city">杭州</string>
	<string name="week_label">星期</string>
	<string name="logon_fail_and_refresh">登录失败，请刷新</string>
	<string name="logoning">正在登录</string>
	<string name="querying">正在查询</string>
	<string name="parsing">正在解析</string>
	<string name="no_course">没有课程</string>
	<string name="refresh">刷新</string>
	<string name="input_checkcode">请输入下面验证码：</string>
	
	<string-array name="weekdays">
	    <item>星期一</item>
	    <item>星期二</item>
	    <item>星期三</item>
	    <item>星期四</item>
	    <item>星期五</item>
	    <item>星期六</item>
	    <item>星期日</item>
	</string-array>
	<string name="week_duration">第%1$s~%2$s周</string>
	
	
	<string name="next">下一步</string>
    <string name="emergency_or_not">急诊还是门诊？</string>
    <string name="emergency">急诊</string>
    <string name="pre_diagnosis">门诊</string>
    <string name="gynecology">请挂妇科</string>
    <string name="to_department">去科室</string>
    <string name="cancel">取消</string>
    <string name="doctor_name">请输入医生名字</string>
    <string name="search_department_or_doctor">搜索科室或医生</string>
    <string name="map">地图</string>
    <string name="locate_me">定位</string>
    <string name="guide">导医</string>
    <string name="visit">探病</string>
    <string name="departments">科室列表</string>
    <string name="department">科室</string>
    <string name="restroom">厕所</string>
    <string name="drinking_water">开水间</string>
    <string name="doctors">医生列表</string>
    <string name="doctor">医生</string>
    <string name="introduction">介绍</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_next">请选择下一步</string>
    <string name="end">结束</string>
    <string name="start_over">重新开始</string>
    <string name="get_medicine">取药</string>
    <string name="assay">化验</string>
    
	<string name="app_name">导航</string>
    <string name="app_pleasewait">请稍候</string>
    <string name="app_network_connecterror">网络连接不可用，请检查网络设置</string>
    <string name="app_error_please_try_again">糟糕，好像出错了，抱歉请稍后重试下吧</string>
    
    <string name="empty"></string>
    
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <!-- widget -->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    
</resources>
