<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="231px"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_building_navigation"
        android:paddingLeft="8dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/actionbar_item"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="4dp" />
        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#999" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/actionbar_item"
            android:gravity="center"
            android:text="@string/book"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="4dp" />
    </LinearLayout>

</LinearLayout>