<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainweixin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee" >

    <RelativeLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bar_bg" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="2dp" >

            <Button
                android:id="@+id/tab_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/tab_map_d"
                android:onClick="onTabClicked"
                android:scaleType="matrix"
                android:text="@string/map"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/tab_introduction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/tab_introduction_n"
                android:onClick="onTabClicked"
                android:scaleType="matrix"
                android:text="@string/introduction"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/tab_guide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/tab_guide_n"
                android:onClick="onTabClicked"
                android:scaleType="matrix"
                android:text="@string/guide"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/tab_departments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/tab_list_n"
                android:onClick="onTabClicked"
                android:scaleType="matrix"
                android:text="@string/departments"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/tab_visit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/tab_visit_n"
                android:onClick="onTabClicked"
                android:scaleType="matrix"
                android:text="@string/visit"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_bottom" />

</RelativeLayout>