<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/mmtitle_bg" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/bar_location_selector"
            android:onClick="locateUser" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/query_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/search_bar_bg"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/query"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/search_bar_edit_bg"
            android:drawableLeft="@drawable/search_bar_icon_normal"
            android:hint="@string/search_department_or_doctor"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#000" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/btn_style_eight"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/map_list"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="#90000000"
            android:divider="#90FFFFFF"
            android:dividerHeight="1px" />

        <LinearLayout
            android:id="@+id/query_content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/tabs_bar_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/query_tab_department"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/tabs_bar_left_on"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/department" />

                <TextView
                    android:id="@+id/query_tab_doctor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tabs_bar_right_off"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/doctor" />

                <TextView
                    android:id="@+id/restroom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/tab_left"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/restroom"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/drinking_water"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/tab_right"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/drinking_water"
                    android:textSize="14sp" />
            </LinearLayout>

            <ListView
                android:id="@+id/query_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white" >
            </ListView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>